@startuml
'https://plantuml.com/class-diagram
hide circle
skinparam classAttributeIconSize 0
hide methods

title Create a Flight Route: Domain Model

package "Route Aggregate" {
    class Route <<entity>> <<root>> {
        - flight_time: double
        - flight_distance: double
        - min_aircraft_range: double
        - min_aircraft_capacity: int
        - active: boolean
        - version: Long
    }
    Route o--> RouteID
    Route --> Airport : departure
    Route --> Airport : destination
    Route "1" o--> "N" RouteHistory

    class RouteID <<value object>> {
        - id: String
    }

    class RouteHistory <<entity>> {
        - description: String
        - registered_at: LocalDateTime
    }
}

package "Airport Aggregate" {
    class Airport <<entity>> <<root>> {
        - name: String
        - status: AirportStatus
    }
    Airport o--> LocationIdentifier
    Airport o--> AirportStatus

    class LocationIdentifier <<value object>> {
        - iata_code: String
    }

    class AirportStatus <<enum>> {
        - OPERATIONAL: int
        - CLOSED: int
        - UNDER_MAINTENANCE: int
    }
}

@enduml